Change h1 on div container

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="container">
-        <h1 v-on:click="showSearch = !showSearch">Click me to show the search field</h1>
+        <h1 v-on:click="showSearch = !showSearch">Click me to show or hide the search field</h1>
         <div id="search" v-show="showSearch">
             <h1>Search trought my courses</h1>
             <div id="search-form">
